<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.e24</groupId>
  <artifactId>wolke</artifactId>
  <version>1.0.1</version>
  <packaging>jar</packaging>

  <name>Wolke-Simulator</name>
  <url>https://github.com/Nilon123456789/Wolke-simulator</url>

  <organization>
    <name>Wolke</name>
  </organization>

  <properties>
    <executable.name>Wolke</executable.name>
    <main.class>com.e24.wolke.application.AppPrincipale24</main.class>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.miglayout</groupId>
      <artifactId>miglayout-swing</artifactId>
      <version>11.3</version>
    </dependency>
    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf</artifactId>
      <version>3.4.1</version>
    </dependency>
    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf-extras</artifactId>
      <version>3.4.1</version>
    </dependency>
    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf-intellij-themes</artifactId>
      <version>3.4.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.18.0</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jogamp.gluegen</groupId>
      <artifactId>gluegen-rt-main</artifactId>
      <version>2.5.0</version>
    </dependency>
    <dependency>
      <groupId>org.jogamp.jogl</groupId>
      <artifactId>jogl-all-main</artifactId>
      <version>2.5.0</version>
    </dependency>
    <dependency>
      <groupId>com.github.weisj</groupId>
      <artifactId>jsvg</artifactId>
      <version>1.4.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.googlejavaformat</groupId>
      <artifactId>google-java-format</artifactId>
      <version>1.19.2</version>
    </dependency>
    <dependency>
      <groupId>org.drjekyll</groupId>
      <artifactId>colorpicker</artifactId>
      <version>2.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.10</version>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>jogamp-remote</id>
      <name>jogamp mirror</name>
      <url>https://www.jogamp.org/deployment/maven/</url>
    </repository>
  </repositories>

  <build>
    <resources>
      <resource>
        <filtering>true</filtering>
        <directory>src/main/resources</directory>
      </resource>
    </resources>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
          <configuration>
            <filesets>
              <fileset>
                <directory>./build/${dest.dir}</directory>
                <includes>
                  <include>**</include>
                </includes>
                <followSymlinks>false</followSymlinks>
              </fileset>
              <fileset>
                <directory>./build/jar</directory>
                <includes>
                  <include>**</include>
                </includes>
                <followSymlinks>false</followSymlinks>
              </fileset>
            </filesets>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
          <executions>
            <execution>
              <goals>
                <goal>copy-resources</goal>
              </goals>
              <phase>prepare-package</phase>
              <configuration>
                <outputDirectory>${basedir}/build/jar</outputDirectory>
                <resources>
                  <resource>
                    <directory>${basedir}/src/main/resources/icons</directory>
                    <includes>
                      <include>splash.gif</include>
                    </includes>
                  </resource>
                </resources>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.6.3</version>
          <configuration>
            <reportOutputDirectory>doc</reportOutputDirectory>
            <destDir>apidocs</destDir>
            <show>private</show>
            <bottom>Copyright © {currentYear} ${project.organization.name}. All rights reserved.</bottom>
            <charset>UTF-8</charset>
            <locale>fr_FR</locale>
            <failOnWarnings>true</failOnWarnings>
            <windowtitle>Wolke Documentation</windowtitle>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
        </plugin>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>2.43.0</version>
          <configuration>
            <java>
              <includes>
                <include>src/main/java/**/*.java</include>
                <!-- Check application code -->
                <include>src/test/java/**/*.java</include>
                <!-- Check application tests code -->
              </includes>
              <googleJavaFormat>
                <version>1.19.2</version>
                <style>GOOGLE</style>
                <reflowLongStrings>true</reflowLongStrings>
                <formatJavadoc>true</formatJavadoc>
              </googleJavaFormat>
              <trimTrailingWhitespace></trimTrailingWhitespace>
              <endWithNewline></endWithNewline>
              <removeUnusedImports></removeUnusedImports>
              <formatAnnotations></formatAnnotations>
            </java>
            <pom>
              <includes>
                <include>pom.xml</include>
              </includes>
              <sortPom></sortPom>
            </pom>
            <markdown>
              <includes>
                <include>README.md</include>
              </includes>
            </markdown>
            <upToDateChecking>
              <enabled>true</enabled>
            </upToDateChecking>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
              </goals>
              <phase>compile</phase>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <outputDirectory>build/jar</outputDirectory>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <manifest>
              <mainClass>${main.class}</mainClass>
            </manifest>
            <manifestEntries>
              <SplashScreen-Image>icons/splash.gif</SplashScreen-Image>
            </manifestEntries>
          </archive>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <goals>
              <goal>single</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>1.5</version>
        <executions>
          <execution>
            <id>parse-version</id>
            <goals>
              <goal>parse-version</goal>
            </goals>
            <phase>initialize</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>build-binaries</id>
            <goals>
              <goal>exec</goal>
            </goals>
            <phase>package</phase>
            <configuration>
              <executable>jpackage</executable>
              <arguments>
                <argument>--type</argument>
                <argument>app-image</argument>
                <argument>--name</argument>
                <argument>${executable.name}</argument>
                <argument>--main-jar</argument>
                <argument>${project.artifactId}-${project.version}-jar-with-dependencies.jar</argument>
                <argument>--main-class</argument>
                <argument>${main.class}</argument>
                <argument>--icon</argument>
                <argument>./src/main/resources/icons/icon${app.icon}</argument>
                <argument>--app-version</argument>
                <argument>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}</argument>
                <argument>--input</argument>
                <argument>./build/jar</argument>
                <argument>--dest</argument>
                <argument>./build/${dest.dir}</argument>
                <argument>--copyright</argument>
                <argument>Copyright © 2024 ${project.organization.name}. All rights reserved.</argument>
                <argument>--vendor</argument>
                <argument>${project.organization.name}</argument>
                <argument>--java-options</argument>
                <argument>--add-exports java.base/java.lang=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED -splash:$APPDIR/splash.gif</argument>
              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>windows</id>
      <activation>
        <os>
          <family>Windows</family>
        </os>
      </activation>
      <properties>
        <app.icon>.ico</app.icon>
        <dest.dir>windows</dest.dir>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.2.0</version>
            <executions>
              <execution>
                <id>build-installer</id>
                <goals>
                  <goal>exec</goal>
                </goals>
                <phase>package</phase>
                <configuration>
                  <executable>jpackage</executable>
                  <arguments>
                    <argument>--type</argument>
                    <argument>msi</argument>
                    <argument>--name</argument>
                    <argument>${executable.name}</argument>
                    <argument>--main-jar</argument>
                    <argument>${project.artifactId}-${project.version}-jar-with-dependencies.jar</argument>
                    <argument>--main-class</argument>
                    <argument>${main.class}</argument>
                    <argument>--icon</argument>
                    <argument>./src/main/resources/icons/icon${app.icon}</argument>
                    <argument>--app-version</argument>
                    <argument>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}</argument>
                    <argument>--input</argument>
                    <argument>./build/jar</argument>
                    <argument>--dest</argument>
                    <argument>./build</argument>
                    <argument>--copyright</argument>
                    <argument>Copyright © 2024 ${project.organization.name}. All rights reserved.</argument>
                    <argument>--vendor</argument>
                    <argument>${project.organization.name}</argument>
                    <argument>--java-options</argument>
                    <argument>--add-exports java.base/java.lang=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED -splash:$APPDIR/splash.gif</argument>
                    <argument>--file-associations</argument>
                    <argument>./src/main/resources/FAwlks-win.properties</argument>
                    <argument>--win-dir-chooser</argument>
                    <argument>--win-menu</argument>
                    <argument>--win-menu-group</argument>
                    <argument>${project.organization.name}</argument>
                    <argument>--win-shortcut</argument>
                    <argument>--win-shortcut-prompt</argument>
                    <argument>--win-per-user-install</argument>
                    <argument>--win-help-url</argument>
                    <argument>${project.url}</argument>
                    <argument>--about-url</argument>
                    <argument>${project.url}</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>mac</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <properties>
        <app.icon>.icns</app.icon>
        <dest.dir>macos</dest.dir>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.2.0</version>
            <executions>
              <execution>
                <id>build-installer</id>
                <goals>
                  <goal>exec</goal>
                </goals>
                <phase>package</phase>
                <configuration>
                  <executable>jpackage</executable>
                  <arguments>
                    <argument>--type</argument>
                    <argument>pkg</argument>
                    <argument>--name</argument>
                    <argument>${executable.name}</argument>
                    <argument>--main-jar</argument>
                    <argument>${project.artifactId}-${project.version}-jar-with-dependencies.jar</argument>
                    <argument>--main-class</argument>
                    <argument>${main.class}</argument>
                    <argument>--icon</argument>
                    <argument>./src/main/resources/icons/icon${app.icon}</argument>
                    <argument>--app-version</argument>
                    <argument>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}</argument>
                    <argument>--input</argument>
                    <argument>./build/jar</argument>
                    <argument>--dest</argument>
                    <argument>./build</argument>
                    <argument>--copyright</argument>
                    <argument>Copyright © 2024 ${project.organization.name}. All rights reserved.</argument>
                    <argument>--vendor</argument>
                    <argument>${project.organization.name}</argument>
                    <argument>--java-options</argument>
                    <argument>--add-exports java.base/java.lang=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED -splash:$APPDIR/splash.gif</argument>
                    <argument>--file-associations</argument>
                    <argument>./src/main/resources/FAwlks-mac.properties</argument>
                    <argument>--about-url</argument>
                    <argument>${project.url}</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>linux</id>
      <activation>
        <os>
          <name>Linux</name>
        </os>
      </activation>
      <properties>
        <app.icon>.png</app.icon>
        <dest.dir>linux</dest.dir>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.2.0</version>
            <executions>
              <execution>
                <id>build-installer</id>
                <goals>
                  <goal>exec</goal>
                </goals>
                <phase>package</phase>
                <configuration>
                  <executable>jpackage</executable>
                  <arguments>
                    <argument>--type</argument>
                    <argument>deb</argument>
                    <argument>--name</argument>
                    <argument>${executable.name}</argument>
                    <argument>--main-jar</argument>
                    <argument>${project.artifactId}-${project.version}-jar-with-dependencies.jar</argument>
                    <argument>--main-class</argument>
                    <argument>${main.class}</argument>
                    <argument>--icon</argument>
                    <argument>./src/main/resources/icons/icon${app.icon}</argument>
                    <argument>--app-version</argument>
                    <argument>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}</argument>
                    <argument>--input</argument>
                    <argument>./build/jar</argument>
                    <argument>--dest</argument>
                    <argument>./build</argument>
                    <argument>--copyright</argument>
                    <argument>Copyright © 2024 ${project.organization.name}. All rights reserved.</argument>
                    <argument>--vendor</argument>
                    <argument>${project.organization.name}</argument>
                    <argument>--java-options</argument>
                    <argument>--add-exports java.base/java.lang=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED -splash:$APPDIR/splash.gif</argument>
                    <argument>--file-associations</argument>
                    <argument>./src/main/resources/FAwlks-lin.properties</argument>
                    <argument>--linux-shortcut</argument>
                    <argument>--linux-menu-group</argument>
                    <argument>${project.organization.name}</argument>
                    <argument>--about-url</argument>
                    <argument>${project.url}</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
